added additional plugins and customized configuration

--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 
+    <!-- Tailwind custom color -->
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+              }
+            }
+          }
+        }
+      </script>
+
     <style>
     /* Manrope font */
     .font-manrope{
@@ -25,7 +38,7 @@
 <body class="font-manrope">
     
     <header>
-        
+
     </header>
 
     <main>
