--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="cupcake">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,39 +15,142 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/07ef5149bc.js" crossorigin="anonymous"></script>
+
     <!-- Tailwind custom color -->
     <script>
         tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                    }
+                }
             }
-          }
         }
-      </script>
+    </script>
 
     <style>
-    /* Manrope font */
-    .font-manrope{
-        font-family: "Manrope", sans-serif;
-     }
-     </style>
+        /* Manrope font */
+        .font-manrope {
+            font-family: "Manrope", sans-serif;
+        }
+    </style>
 </head>
 
 <body class="font-manrope">
-    
-    <header>
 
+    <header class="container mx-auto">
+        <div class="hero">
+            <div class="hero-content flex-col lg:flex-row mt-12 lg:mt-0">
+                <div class="text-center lg:text-left">
+                    <h1 class="text-6xl leading-[4.1rem] lg:text-[5rem] lg:leading-[6.25rem] font-extrabold">It's good <br>
+                        tea time at The <br> Tea House</h1>
+                    <p class="py-6 leading-7 [word-spacing:2.5px]">
+                        Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.
+                    </p>
+                    <button class="btn btn-primary rounded-lg">Explore More</button>
+                </div>
+                <div>
+                    <img
+                    src="images/banner.png"
+                    class="max-w-sm" />
+                    <div class="flex justify-center items-center gap-5 drop-shadow-lg bg-white w-64 px-6 py-5 mx-auto lg:mx-0">
+                        <i class="fa-solid fa-star text-4xl text-amber-500"></i>
+                        <div>
+                            <h3 class="text-3xl">5.00</h3>
+                            <p class="text-[1rem]">Trust Pilot Ratings</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
 
-    <main>
+    <main class="container mx-auto">
+        <!-- featured section -->
+         <section class="text-center px-9 lg:px-0 my-24">
+            <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+            <p class="lg:max-w-4xl mx-auto mb-14">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
 
+         <!-- card section -->
+          <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+
+                <!-- first card -->
+                <div class="card p-8 shadow-xl bg-gradient-to-b from-[#e2e2e6] to-[#f4f4f4]">
+                    <figure>
+                    <img
+                        src="images/tea-1.png"
+                        alt="Shoes" />
+                    </figure>
+                    <div class="card-body text-center px-0">
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p class="text-base">Creamer could be replaced <br> by fresh milk</p>
+                    </div>
+                </div>
+                <!-- second card -->
+                <div class="card p-8 shadow-xl bg-gradient-to-b from-[#e2e2e6] to-[#f4f4f4]">
+                    <figure>
+                    <img
+                        src="images/tea-2.png"
+                        alt="Shoes" />
+                    </figure>
+                    <div class="card-body text-center px-0">
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p class="text-base">Creamer could be replaced <br> by fresh milk</p>
+                    </div>
+                </div>
+                <!-- third card -->
+                <div class="card p-8 shadow-xl bg-gradient-to-b from-[#e2e2e6] to-[#f4f4f4]">
+                    <figure>
+                    <img
+                        src="images/tea-3.png"
+                        alt="Shoes" />
+                    </figure>
+                    <div class="card-body text-center px-0">
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p class="text-base">Creamer could be replaced <br> by fresh milk</p>
+                    </div>
+                </div>
+                <!-- fourth card -->
+                <div class="card p-8 shadow-xl bg-gradient-to-b from-[#e2e2e6] to-[#f4f4f4]">
+                    <figure>
+                    <img
+                        src="images/tea-4.png"
+                        alt="Shoes" />
+                    </figure>
+                    <div class="card-body text-center px-0">
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p class="text-base">Creamer could be replaced <br> by fresh milk</p>
+                    </div>
+                </div>
+          </div>
+        </section>
+
+        <!-- great tea section -->
+         <section class="flex flex-col px-9 lg:px-0 gap-12 lg:flex-row my-24">
+            <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+                <div class="rounded-lg h-36 bg-gradient-to-r from-red-100 to-pink-50"></div>
+                <div class="flex justify-center items-center row-span-2 px-7 pt-12 pb-7 bg-[#E6A62319] rounded-lg"><img src="images/fresh-1.png" alt=""></div>
+                <div class="flex justify-center items-center row-span-2 px-7 pt-12 pb-7 bg-[#57763919]  rounded-lg"><img src="images/fresh-2.png" alt=""></div>
+                <div class="rounded-xl h-36 bg-gradient-to-r from-gray-200 to-gray-100"></div>
+            </div>
+            <div class="flex-1 text-justify lg:text-left">
+                <h2 class="text-5xl font-extrabold mb-5 text-center lg:text-left">Great Tea, Freshly <br> Presented</h2>
+                <p class="text-base font-medium mb-8">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+            
+                <h4 class="text-xl font-extrabold">Unique Taste</h4>
+                <p class="text-base font-medium mb-5">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                <h4 class="text-xl font-extrabold">Premium Quality</h4>
+                <p class="text-base font-medium">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+         </section>
     </main>
 
     <footer>
 
     </footer>
 </body>
+
 </html>
