--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <main class="container mx-auto">
         <!-- featured section -->
-         <section class="text-center px-9 lg:px-0 my-24">
+        <section class="text-center px-9 lg:px-0 my-24">
             <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
             <p class="lg:max-w-4xl mx-auto mb-14">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
 
@@ -129,11 +129,15 @@
         </section>
 
         <!-- great tea section -->
-         <section class="flex flex-col px-9 lg:px-0 gap-12 lg:flex-row my-24">
+        <section class="flex flex-col px-9 lg:pb-0 lg:px-0 gap-12 lg:flex-row my-24">
             <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
                 <div class="rounded-lg h-36 bg-gradient-to-r from-red-100 to-pink-50"></div>
-                <div class="flex justify-center items-center row-span-2 px-7 pt-12 pb-7 bg-[#E6A62319] rounded-lg"><img src="images/fresh-1.png" alt=""></div>
-                <div class="flex justify-center items-center row-span-2 px-7 pt-12 pb-7 bg-[#57763919]  rounded-lg"><img src="images/fresh-2.png" alt=""></div>
+                <div class="flex justify-center items-center row-span-2 px-7 pt-12 pb-7 bg-[#E6A62319] rounded-lg">
+                    <img src="images/fresh-1.png" alt="">
+                </div>
+                <div class="flex justify-center items-center row-span-2 px-7 pt-12 pb-7 bg-[#57763919]  rounded-lg">
+                    <img src="images/fresh-2.png" alt="">
+                </div>
                 <div class="rounded-xl h-36 bg-gradient-to-r from-gray-200 to-gray-100"></div>
             </div>
             <div class="flex-1 text-justify lg:text-left">
@@ -145,7 +149,53 @@
                 <h4 class="text-xl font-extrabold">Premium Quality</h4>
                 <p class="text-base font-medium">Premium Quality that makes tea more elegant and more durable when you use it.</p>
             </div>
-         </section>
+        </section>
+
+         <!-- super clients section -->
+        <section class="flex flex-col lg:flex-row gap-14 px-9 py-12 lg:px-[4.37rem] lg:py-[5.3rem] my-24 rounded-xl bg-gradient-to-l from-[#F00] to-[#FF8938]">
+            <!-- client content -->
+            <div class="flex items-center text-center md:text-left lg:flex-1 mt-12 lg:mt-0">
+                <div>
+                    <h2 class="text-5xl font-extrabold text-white">Meet Our Super <br> Clients</h2>
+                    <p class="text-white mt-5 lg:pr-32">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                    <button class="btn bg-white rounded-lg mt-8">Show More</button>
+                </div>
+            </div>
+
+            <!-- client insight container -->
+            <div class="relative mx-auto md:mx-auto lg:mx-0">
+                <!-- next insight -->
+                <div class="opacity-40 z-10 relative w-[22rem] lg:w-[27rem] lg:mb-16 p-10 rounded-lg bg-white">
+                    <img class="border-4 border-white absolute bg-white rounded-full -top-6 -left-5" src="images/client.png" alt="">
+                    <p class="font-medium">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h4 class="mt-5 font-bold">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end relative bottom-2">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- current insight -->
+                <div class="absolute z-20 top-36 lg:-left-20 lg:w-[27rem] p-10 rounded-lg bg-white">
+                    <img class="border-4 border-white absolute bg-white rounded-full -top-6 -left-5" src="images/client.png" alt="">
+                    <p class="font-medium">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h4 class="mt-5 font-bold">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end relative bottom-2">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- previous insight -->
+                <div class="opacity-40 z-10 relative w-[22rem] lg:w-[27rem] p-10 rounded-lg bg-white">
+                    <img class="border-4 border-white absolute bg-white rounded-full -top-6 -left-5" src="images/client.png" alt="">
+                    <p class="font-medium">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h4 class="mt-5 font-bold">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end relative bottom-2">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
