--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
     </main>
 
 <!-- FOOTER -->
-    <footer class="bg-base-200 text-base-content px-5 py-5 lg:px-56 lg:py-36">
-        <div class="flex flex-col lg:flex-row justify-between mb-10">
+    <footer class="bg-red-200 text-base-content px-5 py-5 md:px-32 md:py-16 lg:px-56 lg:py-36">
+        <div class="flex flex-col md:flex-row justify-between mb-10">
             <img class="w-16 mx-auto md:mx-0" src="images/cup.png" alt="">
             <p class="flex items-center gap-3 justify-center lg:flex-none">
                 <span class="text-xl font-medium">Ready to get strated?</span>
